tests/fixtures/invalid/pow_none_bytes_float.py
# Cannot call pow() with None, Bytes, Float
x = pow(None, b"hello", 1.0)
